# 
# Stop MDM community Header =======================================


0. Contents
	
	These are the release notes of the openATFX library.
	

1. Changes

	0.5.6 (Christian Rechner)

	    - Added buffer when reading external component files to increase performance
	    - Implemented reading flags from external component file
	    - Implemented handling flags in component file

	0.5.5 (Christian Rechner)

	    - Included patch from Olaf Flebbe to support single bits with dt_bit_uint in external components
	    - Changed name generation of external component files from fixed "data_1.bin" to ATFX file name

	0.5.4 (Christian Rechner)

	    - Implemented InstanceElementIterator with flyweight pattern
	      to improve memory consumption.

	0.5.3 (Christian Rechner)

	    - Implemented methods of ValueMatrix on AoSubMatrix:
	      * getMode
	      * getColumnCount
	      * getRowCount
	      * listColumns
	      * listIndependentColumns
	      * getColumns
	      * getIndependentColumns
	      * destroy
	    - Implemented methods of Column on ValueMatrix on AoSubMatrix
	      * getSourceMQ
	      * getName
	      * getFormula
	      * isIndependent
	      * getDataType
	      * getSequenceRepresentation
	      * getGenerationParameters
	      * getRawDataType
	      * destroy
	    - Changed reading of external component files to 'FileChannel'
	      for performance reasons


	0.5.2 (Gigatronik Ingolstadt GmbH)

	    - Added automatic determination for missing inverse relations of ATFX files.
	    - Upgrade to woodstox 4.4.1


	0.5.1 (Christian Rechner)

	    - Upgrade to woodstox 4.3.0
	    - Increased default value of context parameter 'EXT_COMP_SEGSIZE' to 500 MB
	    - Added handling of new ASAM ODS 5.3.0 base attributes 'ao_bit_count' and 'ao_bit_offset' 
		- Implemented writing of DT_BOOLEAN values to external component files
		

	0.5.0 (Christian Rechner)
	
	    - Upgrade to ODS IDL 5.3.0 (not all new methods implemented)